--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,31 @@
 {
-  "name": "dlevsha/compalex",
+  "name": "travelhood/compalex",
   "type": "project",
-  "description": "Compalex is a lightweight script to compare two database schemas. It supports MySQL, MS SQL Server and PostgreSQL",
+  "description": "Compalex is a lightweight script to compare two database schemas. It supports MySQL",
   "keywords": ["compare database schemas","compare databases","database diff","database schema diff"],
-  "homepage": "https://github.com/dlevsha/compalex",
+  "homepage": "https://github.com/travelhood/compalex",
   "license": "MIT",
   "authors": [
     {
       "name": "Levsha Dmitry",
       "email": "info@compalex.net",
-      "homepage": "http://compalex.net",
+      "homepage": "https://github.com/dlevsha/compalex",
+      "role": "Developer"
+    },
+    {
+      "name": "Lajos Bencz",
+      "email": "lajos.bencz@travelhood.com",
+      "homepage": "https://travelhood.com",
       "role": "Developer"
     }
   ],
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=7",
+    "ext-pdo": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Compalex\\": "src/Compalex/"
+    }
   }
 }
